# OracleVM

./: .gitignore  .gitmodules  BITVMX_PROOF_SESSION.md  Cargo.toml  README.md  TESTNET_GUIDE.md  bitvmx_proof.json  fix_submodule.sh  option_execution_output.txt  option_settlement_proof.json  option_settlement_proof.script  poc_demo.sh  proof_submission_result.json  real_bitvmx_proof.sh  run_aggregator.sh  run_bitvmx_execution.py  simple_option.s  test_regtest_flow.sh  test_regtest_flow_with_hash.sh  working_proof_concept.md
bitvmx/: .gitignore  .gitmodules  Cargo.toml  README.md  bitvmx_hash_chain_wrapper.py
bitvmx/BitVMX-CPU/docker-riscv32/src/: advanced_option_settlement.c  option_purchase.c  option_settlement.c  sha256.c
bitvmx/execution_files/: option_purchase.elf
bitvmx_custom/: README.md  compile_option.sh  option_settlement.c
bitvmx_proof_files/: anchor_option_proof.py  bitvmx_merkle_proof.json  complete_proof_1.json  complete_proof_2.json  complete_proof_3.json  generate_bitvmx_merkle_proof.py  generate_complete_bitvmx_proof.py
bitvmx_protocol/: .gitignore  BITVMX_INTEGRATION.md  Dockerfile  PROOF_VERIFICATION_REPORT.md  bitvmx.ld  generate_bitvmx_proof.py  option_settlement_bitvmx.c  option_settlement_complete.c  option_settlement_rom_commitment.txt  option_settlement_trace.json  proof_1.json  proof_2.json  proof_3.json  simple.ld  test_bitvmx_complete.sh  test_bitvmx_curl.sh  test_proof_verification.py  verify_option_settlement_proof.sh
bitvmx_protocol/pybitvmbinding-patch/: Cargo.toml
calculation/: Cargo.toml
calculation/src/: lib.rs  main.rs  models.rs  price_updater.rs  pricing.rs  repositories.rs  services.rs  theta_targeting.rs
contracts/: Cargo.toml  README.md  build.rs
contracts/examples/: bitcoin_option_example.rs  bitvmx_integration.rs  bitvmx_local_test.rs  create_test_transaction.rs  full_bitvmx_settlement.rs  option_trading_with_aggregator.rs  testnet_demo.rs
contracts/src/: bitcoin_anchoring.rs  bitcoin_anchoring_v2.rs  bitcoin_option.rs  bitcoin_transaction.rs  bitcoin_utils.rs  bitvmx_bridge.rs  bitvmx_emulator_integration.rs  bitvmx_integration.rs  bitvmx_option_registry.rs  bitvmx_presign.rs  bitvmx_proof_generator.rs  buyer_only_option.rs  lib.rs  main.rs  option_contract.rs  pool_manager.rs  price_feed_client.rs  settlement.rs  simple_contract.rs  testnet_deployer.rs
contracts/tests/: README.md  aggregator_integration_test.rs  bitcoin_anchoring_test.rs  bitcoin_script_test.rs  bitvmx_option_registration_test.rs  buyer_only_integration_test.rs  integration_test.rs  option_creation_test.rs  pool_management_test.rs  run_unit_tests.rs  settlement_test.rs  simple_contract_unit_tests.rs  standalone_test.rs
contracts/tests/unit/: manager_test.rs  mod.rs  option_test.rs  pool_test.rs
crates/aggregator/src/: main.rs
crates/bitcoin-client/src/: client.rs  lib.rs  scripts.rs  utxo.rs
crates/bitvmx-integration/src/: vm.rs
crates/committer/src/: main.rs
crates/common/src/: config.rs  crypto.rs  error.rs  lib.rs  types.rs
crates/defi-primitives/src/: lib.rs  options.rs  rwa.rs  vaults.rs
crates/oracle-node/: Cargo.toml  build.rs
crates/oracle-node/src/: binance.rs  coinbase.rs  consensus.rs  grpc_client.rs  kraken.rs  lib.rs  main.rs  precision_test.rs  price_provider.rs  safe_price.rs
crates/oracle-node/tests/: consensus_test.rs  integration_test.rs  precision_test.rs  price_collection_test.rs
docs/: BITVMX_ANALYSIS_SUMMARY.md  BITVMX_PROOF_GENERATION_GUIDE.md  CLAUDE.md  DUAL_IMPLEMENTATION_RATIONALE.md  FINAL_IMPLEMENTATION_STATUS.md  PRECISION_SOLUTION.md  PRECISION_WARNING.md  PRESENTATION_FOR_TEAM.md  PROJECT_OVERVIEW_FOR_DEVELOPERS.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_WHITEPAPER.md  TESTNET_DEPLOYMENT.md  op_return_anchoring.md  기술백서_BTCFi_Oracle_VM.md
examples/: option_anchoring_demo.rs
orchestrator/: Cargo.toml  build.rs
orchestrator/src/: connectors.rs  connectors_real.rs  events.rs  flows.rs  main.rs
scripts/: decode_btcfi_option.sh  fix_submodules.sh  test_bitcoin_anchoring.sh  test_bitvmx_option_registration.sh  test_btcfi_anchoring.sh  test_full_flow_regtest.py  test_full_system_integration.sh  test_realtime_integration.sh  verify_bitvmx_option.py  verify_btcfi_protocol.py
