[package]
name = "bitvmx_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
pyo3 = { version = "0.22", features = ["auto-initialize"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }

[[bin]]
name = "bitvmx-settlement"
path = "src/main.rs"

[lib]
path = "src/lib.rs"