[package]
name = "btcfi-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32", features = ["serde", "rand", "rand-std"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
oracle-vm-common = { path = "../crates/common" }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"